# first-opengl

./: .clang-format  .gitignore  CMakeLists.txt
.cache/clangd/index/: context.c.9182E0BCD001AD75.idx  egl_context.c.0848D7230FBC11BF.idx  glad.c.1BC211A22A6BB444.idx  glad.h.B5F6CFAC9BD6863A.idx  glfw3.h.543A74A5ADBB0F3D.idx  glfw3native.h.15178EC0C9A6DB71.idx  glx_context.c.6073667E1B22C379.idx  init.c.1E12802FE88BCA08.idx  input.c.F770427AAF95779B.idx  internal.h.B5ADFD8D8938FCEA.idx  khrplatform.h.5899EB9AE83F62EC.idx  linux_joystick.c.0EDBB3E7AE5690F2.idx  linux_joystick.h.09960552FDD48173.idx  main.cpp.FB372A78AA58528D.idx  mappings.h.173B52718C8B60C1.idx  monitor.c.A9E5E19DB6B57DC3.idx  null_init.c.6FA6C9E27EB22940.idx  null_joystick.c.77A931157C5A8FB4.idx  null_joystick.h.520A1BFC06AE1E4B.idx  null_monitor.c.79E3C6795A09DD1A.idx  null_platform.h.FB36D2624E6597AF.idx  null_window.c.F3838E87D5D9CB64.idx  osmesa_context.c.768D8175AF7A81C6.idx  platform.c.D41DF2D190B4D700.idx  platform.h.58119E6AA74B1BEA.idx  posix_module.c.9DB3EBD3C650E6ED.idx  posix_poll.c.32AF657EE8A7DF87.idx  posix_poll.h.386E3336B3E90022.idx  posix_thread.c.22BFD2F4F78245D2.idx  posix_thread.h.5A210E48D7B9BFD1.idx  posix_time.c.A25EC2EA03FBA9FC.idx  posix_time.h.28DBC3B9E32F2224.idx  vulkan.c.2ABC94D24C54889F.idx  window.c.1ACAE736FC331AA5.idx  wl_init.c.0BC1C24B4033BF34.idx  wl_monitor.c.7E161B64D4F06EAE.idx  wl_platform.h.FDDADE8FF3DABD39.idx  wl_window.c.F26CCFC5584C01FA.idx  x11_init.c.751F9F0BA4F0E7FD.idx  x11_monitor.c.6032A9AFE995EADC.idx  (+4 more)
include/: primitives.h  shape_data.h
src/: fragment_shader_code.glsl  main.cpp  shadercode.cpp  shape_data.cpp  vertex_shader_code.glsl
